...
    <string name="check">Check</string>
    <string name="imei_must_be_number">IMEI must only contain numbers</string>
    <string name="fifteen_digit_imei">Please enter 14–16 digit IMEI</string>
    <string name="sure_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="scan_result">Scan Result</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="authenticating">Authenticating</string>
    <string name="email_invalid">Invalid email!</string>
    <string name="can_not_empty">Can\'t be empty!</string>
...
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="adding_device_info">Adding Device Information…</string>
    <string name="history">History</string>
    <string name="verify_scan">Verify Scan</string>
    <string name="verify_scan_detail">Please verify IMEI number from scan and press OK to continue</string>
    <string name="checking">Checking</string>
    <string name="device_not_found">IMEI not found!</string>
    <string name="no_internet">No Internet!</string>
    <string name="yes_enable">Yes, enable it!</string>
    <string name="instruction_detail">
        &lt;html&gt;
         &lt;head&gt;&lt;/head&gt;
...
